# rsklpr

./: .gitattributes  .gitignore  CONTRIBUTE.md  CONTRIBUTING.md  LICENSE  README.md  configure.sh  lint.sh  pyproject.toml
.github/workflows/: linting_and_tests.yml  main_run_tests.yml  pr_run_tests.yml
docs/: usage.ipynb
paper/: refs.bib  rsklpr.tex
src/experiments/: asymmetrical_distributions.ipynb  common.py  joint_kde_predictor_bandwidth.ipynb  no_ground_truth_curves.ipynb
src/experiments/data/: TSLA.csv  anti-diabetic.csv  elecequip.csv  noaa_data.csv  public_curves_no_ground_truth.py  synthetic_assymetric_benchmarks.py  synthetic_asymmetric_benchmarks.py  synthetic_benchmarks.py
src/rsklpr/: kernels.py  rsklpr.py
src/rsklpr/kde_statsmodels_impl/: __init__.py  bandwidths.py  kernel_base.py  kernel_density.py  kernels.py
tests/: lint.sh
tests/rsklpr_tests/: test_kernels.py  test_rsklpr.py  utils.py
tests/rsklpr_tests/kde_statsmodels_impl_tests/: test_kernel_density.py
