[tool.poetry]
authors = ["Yaniv Shulman <yaniv@shulman.info>"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering :: Mathematics",
]
description = "Implementation of the Robust Local Polynomial Regression with Similarity Kernel draft paper"
homepage = "https://github.com/yaniv-shulman/rsklpr"
keywords = [
    "statistics", "robust statistics", "regression", "robust regression", "local polynomial regression", "machine learning", "locally weighted regression",
]
license = "GPL-3.0-only"
name = "rsklpr"
packages = [
    { include = "rsklpr", from = "src" }
]
readme = "README.md"
repository = "https://github.com/yaniv-shulman/rsklpr"
version = "0.7.0"

[tool.poetry.group.experiments]
optional = true

[tool.poetry.group.dev]
optional = true

[tool.poetry.dependencies]
joblib = "^1.3.2"
numpy = "^1.24.4"
python = ">=3.8.0"
scikit-learn = "^1.3.2"
scipy = "^1.9.3"

[tool.poetry.group.experiments.dependencies]
chart-studio = "^1.1.0"
ipywidgets = "^8.1.2"
localreg = "^0.5.0"
matplotlib = "^3.7.5"
notebook = "^7.1.2"
pandas = "^2.0.3"
plotly = "^5.20.0"
statsmodels = "^0.14.1"
tqdm = "^4.66.2"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^24.3.0"}
coverage = {extras = ["toml"], version = "^7.4.4"}
mypy = "^1.9.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
pytest-xdist = "^3.5.0"
ruff = "^0.3.4"
statsmodels = "^0.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".idea",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pycache__",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "paper",
    "venv",
]

# Same as Black.
line-length = 120
indent-width = 4
target-version = "py38"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: tests that take a long time to run",
]
minversion = "6.0"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
omit = ["tests/*", "src/experiments/*"]

[tool.coverage.report]
show_missing=true
